--- a/gruvbox-userstyle/firefox-light.scss
+++ b/gruvbox-userstyle/firefox-light.scss
@@ -181,7 +181,7 @@ div[style*="visibility: visible"]
 
   h3,h4
   {
-    color: gb-lm-dark-yellow !important;
+    color: gb-lm-dark-orange !important;
   }
 
   h5,h6
