--- a/gruvbox-userstyle/userstyle-light.scss
+++ b/gruvbox-userstyle/userstyle-light.scss
@@ -181,7 +181,7 @@ div[style*="visibility: visible"]
 
   h3,h4
   {
-    color: #d79921 !important;
+    color: #d65d0e !important;
   }
 
   h5,h6
