--- a/.themes/oomox-gruvbox-dark/cinnamon/scss/_global.scss
+++ b/.themes/oomox-gruvbox-dark/cinnamon/scss/_global.scss
@@ -6,7 +6,7 @@ $button_bg_color: #3c3836;
 $button_fg_color: #fbf1c7;
 $selected_bg_color: #458588;
 $selected_fg_color: #fbf1c7;
-$tooltip_bg_color: #282828;
+$tooltip_bg_color: #7c6f64;
 $tooltip_fg_color: #fbf1c1;
 $dark_bg_color: fade-out(#504945, 1 - 1.0);
 $dark_fg_color: #fbf1c1;
